--- a/docs/docs.css
+++ b/docs/docs.css
@@ -35,20 +35,26 @@ header {
   justify-content: center;
   height: 360px;
   margin: 0;
-  background: linear-gradient(0deg, rgba(9,9,121,1) 0%, rgba(0,212,255,1) 100%);
+  background: linear-gradient(to right,#009191,#fbcb67);
   color: white;
 }
 
 footer {
   width: 100%;
-  min-height: 120px;
-  background: gray;
+  background: rgba(0,145,145,1);
   color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 12px;
+  align-items: center;
+  padding: 0.75rem;
   margin-top: 64px;
+  font-size: .875rem;
+}
+
+footer > p {
+    margin: 0;
+    display: inline-block;
 }
 
 h1 {
@@ -64,6 +70,10 @@ h2 {
 
 h3 {
   font-weight: 300;
+}
+
+jina-qa-bot h3 {
+    font-weight: revert;
 }
 
 header h1 {
@@ -130,20 +140,21 @@ section.columns {
   grid-template-columns: repeat(auto-fit, minmax(400px, 488px));
   grid-gap: 48px;
   justify-content: center;
+  align-items: center;
 }
 
 section.columns > div {
   flex: 1;
 }
 
-section.examples {
+section.documents {
   display: grid;
   grid-template-columns: 240px minmax(400px, 784px);
   grid-gap: 48px;
   justify-content: center;
 }
 
-section.examples h2:first-of-type {
+section.documents h2:first-of-type {
   margin-top: 0;
 }
 
@@ -160,4 +171,33 @@ td, th {
   padding: 4px;
   text-align: left;
   vertical-align: top;
+}
+
+
+.bot-container {
+    width: 100%;
+    height: 30rem;
+    position: relative;
+
+    border: 1px solid gray;
+    border-radius: 0.25rem;
+    background-color: #eee;
+
+    transition: background-color 0.2s;
+}
+
+@media (prefers-color-scheme: dark) {
+    .bot-container:not(.light) {
+        background: #111;
+    }
+}
+
+.dark {
+    background: black;
+}
+
+p > code {
+    background: #eee;
+    border-radius: 0.25rem;
+    padding: 0 0.25em;
 }
