--- a/src/docs/docs.css
+++ b/src/docs/docs.css
@@ -181,7 +181,7 @@ td, th {
 
 .bot-container {
     width: 100%;
-    height: 30rem;
+    height: 50rem;
     position: relative;
 
     border: 1px solid gray;
@@ -189,6 +189,10 @@ td, th {
     background-color: #eee;
 
     transition: background-color 0.2s;
+}
+
+.bot-container qa-bot {
+    position: absolute;
 }
 
 @media (prefers-color-scheme: dark) {
